--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -18,24 +18,22 @@
     </section>
   </div>
 {% endfor %}
-{% endif %}
-{% if !tracks.length %}
-  <p>No results for that search. You probably should''ve searched SexyBack</p>
+{% else %}
+  <p>No results for that search. You probably should've searched SexyBack</p>
 {% endif %}
 </div>
 <script>
-$(".searchResultsContainer").css('border', 'solid #7a8491 1px');
-$(".main-content").css('overflow', 'scroll');
-var socket = io.connect('/');
+  $(".searchResultsContainer").css('border', 'solid #7a8491 1px');
+  $(".main-content").css('overflow', 'scroll');
+  
+  var socket = io.connect('/');
+  var r_id = '{{r_id}}';
 
-var r_id = '{{r_id}}';
-
-$(".trackEntry").click(function() {
-  var uri = $( this ).attr("uri");
-  console.log(uri);
-  socket.emit('sendTrack', {data: uri, room: r_id});
-  window.location.pathname = "/" + r_id;
-});
+  $(".trackEntry").click(function() {
+    var uri = $( this ).attr("uri");
+    socket.emit('sendTrack', {data: uri, room: r_id});
+    window.location.pathname = "/" + r_id;
+  });
 </script>
 
 {% endblock %}/
